// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App correctly renders Artist-question screen 1`] = `
<WithActivePlayer
  question={
    Object {
      "answers": Array [
        Object {
          "artist": "Billie Eilish",
          "picture": "/img/default-artist.png",
        },
        Object {
          "artist": "Imagine Dragons",
          "picture": "/img/default-artist.png",
        },
        Object {
          "artist": "Artur Latte",
          "picture": "/img/default-artist.png",
        },
      ],
      "song": Object {
        "artist": "Artur Latte",
        "src": "./tracks/Raim_Artur_Latte.mp3",
      },
      "type": "artist",
    }
  }
/>
`;

exports[`App correctly renders Attempts losing screen 1`] = `
<Connect(LosingScreen)>
  <h2
    className="result__title"
  >
    Какая жалость!
  </h2>
  <p
    className="result__total result__total--fail"
  >
    У вас закончились все попытки. Ничего, повезёт в следующий раз!
  </p>
</Connect(LosingScreen)>
`;

exports[`App correctly renders Authorization is required 1`] = `<WithLogin />`;

exports[`App correctly renders Genre-question screen 1`] = `
<WithUserAnswers
  onAnswer={[MockFunction]}
  question={
    Object {
      "answers": Array [
        Object {
          "genre": "pop",
          "src": "./tracks/Anivar_Summer.mp3",
        },
        Object {
          "genre": "jazz",
          "src": "./tracks/Billie_Eilish_ilomilo.mp3",
        },
        Object {
          "genre": "rock",
          "src": "./tracks/Cj_L_Black_Rain.mp3",
        },
        Object {
          "genre": "classic",
          "src": "./tracks/Orquesta_L_rica_de_Barcelona_Las_Cuatro_Estaciones,_Invierno_Allegro_Non_Molto.mp3",
        },
      ],
      "genre": "rock",
      "type": "genre",
    }
  }
/>
`;

exports[`App correctly renders Time losing screen 1`] = `
<Connect(LosingScreen)>
  <h2
    className="result__title"
  >
    Увы и ах!
  </h2>
  <p
    className="result__total result__total--fail"
  >
    Время вышло! Вы не успели отгадать все мелодии
  </p>
</Connect(LosingScreen)>
`;

exports[`App correctly renders Welcome screen 1`] = `
<Connect(WelcomeScreen)
  attempts={3}
/>
`;
